2003-12-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Crash fix from Chee Bin HOH.

2003-12-18  Shaun McCance  <shaunm@gnome.org>

	All from Chee Bin HOH:

	* data/ui/yelp.glade:
	- A new 'Find dialog which has same GUI as epiphany's Find dialog.

	* src/yelp-html-gtkhtml2.c:
	- Add automatically 'wrap around' if finding reaches the end of an
	  html page (but avoid searching twice).
	- Searching from where the previous finding stops.
	- Clean up the yelp-html-gtkhtml2.c source a bit.

	* src/yelp-html.c:
	- Change yelp_html_find to return a boolean value to indicate the
	  success or failure of findiing.

	* src/yelp-window.c:
	- Change 'Find in page... Ctrl+F' to 'Find... Ctrl+F'
	- Change 'Find again  Ctrl+G' to 'Find Next  Ctrl+G'
	- Add 'Find Previous  Shift+Ctrl+G' to 'Edit' menu.
	- Disable the 'Next' button if finding next fails or 'Previous'
	  button if finding previous fails.
	- Disable 'Next' and 'Previous' buttons if no text being entered
	  into the 'Find' text entry, else enable the both buttons.
	- Hitting 'Alt-N' or 'Alt+P' will only activate the 'Next' button or
	  'Previous' button, NOT pulling down the 'Find' combobox entry list.

2003-12-17  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-main.c:
	* src/yelp-window.c:
	- Attempts at working with GtkIconTheme.

	* src/yelp-window.c:
	- Check for model != NULL, to avoid ugly warnings.

2003-12-16  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-history.h:
	* src/yelp-html.h:
	* src/yelp-util.c:
	* src/yelp-window.c:
	- Removing yelp-scrollkeeper and yelp-sections.

2003-12-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Made sidebar selection follow the page loeded.

2003-12-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-window.c:
	- Add prev, next, and toc to YelpPage.