@@ -1,3 +1,8 @@
+2003-12-22  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Changed things around to accomodate more stuff.
+
 2003-12-18  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
